<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gridChoices"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:id="@+id/gridChoices"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight = "1.0"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="50dp">


        <TextView
            android:id="@+id/gridChoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/callToAction"
            android:gravity="center"
            android:textSize="30sp"
            />

        <TextView
            android:id="@+id/grid4x4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/easy"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_marginTop="50dp"
            />
        <TextView
            android:id="@+id/grid5x4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/grid6x4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/difficult"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>