<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/info"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/win"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="#FF0000"
            android:text="@string/winStatus"
            android:layout_marginTop="50dp"/>

        <Button
            android:id="@+id/againBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:text="@string/again"
            android:background="@drawable/cover"
            android:layout_marginTop="100dp"/>

        <Button
            android:id="@+id/exitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:text="@string/exit"
            android:background="@drawable/cover"
            android:layout_marginTop="50dp"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>